# tcc

./: .gitignore  Algoritmos.hpp  CMakeLists.txt  Cromossomo.cpp  Cromossomo.hpp  CromossomoMorto.cpp  CromossomoMorto.hpp  Funcao.cpp  Funcao.hpp  Funcoes.hpp  Migracao.cpp  Migracao.h  Populacao.cpp  Populacao.h  PopulacaoTransformacao.cpp  PopulacaoTransformacao.h  README.md  Resultado.h  main.cpp  mainConvencional.cpp  mainNaoConvencional.cpp  mainParalelo.cpp
